feat:缓存初始化